# geany-code

./: .gitignore  CLAUDE.md  CMakeLists.txt  TODO.md  meson.build
data/web/: chat.css  chat.html  chat.js
src/: chat_input.c  chat_input.h  chat_webview.c  chat_webview.h  chat_widget.c  chat_widget.h  cli_session.c  cli_session.h  editor_bridge.c  editor_bridge.h  editor_dbus.c  editor_dbus.h  hooks_dialog.c  hooks_dialog.h  mcp_server.c  plugin.c  plugin.h  session_picker.c  session_picker.h  settings.c  settings.h
